Fixed Index and Portfolio
I fixed the code for the Home Page as well as the Portfolio page which were both a bit messed up from the previous upload.

--- a/Styles/Portfolio.css
+++ b/Styles/Portfolio.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600&family=Source+Code+Pro:wght@400&display=swap');
-<<<<<<< Updated upstream
-=======
 
->>>>>>> Stashed changes
 html {
     background-color: #f4f4f4;
     background-size: cover;
@@ -239,43 +236,4 @@ footer {
     float: right;
     margin-top: -11.2em;
     opacity: 0.5;
-}
-header h1 {
-    margin-top: 1em;
-    margin-left: 1em;
-}
-header h1 a {
-    font-family: "Quicksand", sans-serif;
-    text-decoration: none;
-    color: white;
-    float: left;
-    font-size: 1.5em;
-}
-header h1 a:visited {
-    text-decoration: none;
-}
-nav h4 {
-    float: right;
-    list-style: none;
-	position: relative;
-    margin-right: 1em;
-}
-nav a {
-	text-align: center;
-	width: 5em;
-	text-decoration: none;
-	color: white;
-    font-family: "Quicksand", sans-serif;
-    font-size: 1.5em;
-    letter-spacing: .1em;
-    background-color: darkgray;
-    border-radius: 1em;
-    padding: 0.5em 1em 0.5em 1em;
-}
-footer {
-    text-align: center;
-    padding-top: 40em;
-    font-family: "Quicksand", sans-serif;
-    color: white;
-    font-size: 1em;
 }
