--- a/Styles/index.css
+++ b/Styles/index.css
@@ -99,11 +99,7 @@ li a {
 footer {
     z-index: 5;
     text-align: center;
-<<<<<<< Updated upstream
-    padding-top: 6em;
-=======
     margin-top: 60em;
->>>>>>> Stashed changes
     font-family: sans-serif;
     color: #6a6a6a;
     font-size: 0.7em;
